Fix issue with content getting fully cutoff when on mobile and using landscape orientation

--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ html,
 body {
     margin: 0;
     padding: 0;
-    height: 100%;
+    min-height: 100vh;
 }
 
 html {
@@ -31,6 +31,7 @@ h1 {
     display: flex;
     flex-direction: column;
     background-color: white;
+    margin-bottom: 20px;
 }
 
 #display {
